fixed dropdown on small screen size

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ p {
 }
 
 @media screen and (max-width: 600px) {
-    .nav-link-headers{
+    .title-background {
         display: none;
     }
 }
